fixed header size on tablet

--- a/public/styles/projects/template-horizontal/style.scss
+++ b/public/styles/projects/template-horizontal/style.scss
@@ -1,3 +1,9 @@
+@media only screen and (max-device-width : 981px) {
+	body {
+		min-width: 962px;
+	}
+}
+
 #bl_main_container {
 	width: 962px;
 	margin-left: auto;
